Fix: update undo/redo toolbar visibility and styling for improved user experience

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -395,6 +395,8 @@
   padding-right: 1rem;
   padding-left: 1rem;
   height: 2.2rem;
+  box-shadow: 0 0 0 10px oklch(86.9% 0.005 56.366);
+  background: oklch(86.9% 0.005 56.366);
 }
 
 /* CSS for content inside page builder # start */
